Xong thêm sản phẩm

--- a/views/element/header.ejs
+++ b/views/element/header.ejs
@@ -5,7 +5,7 @@
             <div class="row">
                 <!-- Header Top Center 4 -->
                 <div class="header-top-left header-top-left-8 col-xs-8 text-left">
-                    <a href="index.html" class="logo-2">
+                    <a href="/" class="logo-2">
                         <img src="img/logo.png" alt="logo" />
                     </a>
                 </div>
@@ -29,19 +29,22 @@
                         <nav>
                             <ul>
                                 <li class="menu_sanpham">
-                                    <a href="/quanlysanpham">Quản lý sản phẩm</a>
+                                    <a href="/quanlysanpham">Sản phẩm</a>
+                                </li>
+                                <li class="menu_daugia">
+                                    <a href="/quanlydaugia">Đấu giá</a>
                                 </li>
                                 <li class="menu_hoadon">
-                                    <a href="/quanlyhoadon">Quản lý hoá đơn</a>
+                                    <a href="/quanlyhoadon">Hoá đơn</a>
                                 </li>
                                 <li class="menu_khachhang">
-                                    <a href="/quanlykhachhang">Quản lý khách hàng</a>
+                                    <a href="/quanlykhachhang">Khách hàng</a>
                                 </li>
                                 <li class="menu_doanhnghiep">
-                                    <a href="/quanlydoanhnghiep">Quản lý doanh nhgiệp</a>
+                                    <a href="/quanlydoanhnghiep">Doanh nhgiệp</a>
                                 </li>
                                 <li class="menu_loaisanpham">
-                                    <a href="/quanlyloaisanpham">Quản lý loại sản phẩm</a>
+                                    <a href="/quanlyloaisanpham">Loại sản phẩm</a>
                                 </li>
                             </ul>
                         </nav>
@@ -53,19 +56,22 @@
                         <nav>
                             <ul>
                                 <li class="menu_sanpham">
-                                    <a href="/quanlysanpham">Quản lý sản phẩm</a>
+                                    <a href="/quanlysanpham">Sản phẩm</a>
+                                </li>
+                                <li class="menu_daugia">
+                                    <a href="/quanlydaugia">Đấu giá</a>
                                 </li>
                                 <li class="menu_hoadon">
-                                    <a href="/quanlyhoadon">Quản lý hoá đơn</a>
+                                    <a href="/quanlyhoadon">Hoá đơn</a>
                                 </li>
                                 <li class="menu_khachhang">
-                                    <a href="/quanlykhachhang">Quản lý khách hàng</a>
+                                    <a href="/quanlykhachhang">Khách hàng</a>
                                 </li>
                                 <li class="menu_doanhnghiep">
-                                    <a href="/quanlydoanhnghiep">Quản lý doanh nhgiệp</a>
+                                    <a href="/quanlydoanhnghiep">Doanh nhgiệp</a>
                                 </li>
                                 <li class="menu_loaisanpham">
-                                    <a href="/quanlyloaisanpham">Quản lý loại sản phẩm</a>
+                                    <a href="/quanlyloaisanpham">Loại sản phẩm</a>
                                 </li>
                             </ul>
                         </nav>
